---
title: MbengkelIn — Entity Relationship Diagram
config:
  theme: base
  themeVariables:
    primaryColor: "#ffffff"
    primaryTextColor: "#000000"
    primaryBorderColor: "#000000"
    lineColor: "#000000"
    secondaryColor: "#ffffff"
    tertiaryColor: "#ffffff"
    background: "#ffffff"
    mainBkg: "#ffffff"
    nodeBorder: "#000000"
    clusterBkg: "#ffffff"
    titleColor: "#000000"
    edgeLabelBackground: "#ffffff"
    attributeBackgroundColorEven: "#ffffff"
    attributeBackgroundColorOdd: "#eeeeee"
    fontFamily: "monospace"
---
erDiagram
    users {
        uuid id PK
        text name
        text profile_image_url
        float balance
        float held_balance
        float pending_balance
        text role
        text bank_name
        text bank_account_number
        text bank_account_name
    }
    vehicles {
        uuid id PK
        uuid customer_id FK
        text manufacturer
        text model
        int year
        text license_plate
        text color
        timestamptz created_at
    }
    bengkels {
        uuid id PK
        uuid provider_uid FK
        text name
        text address
        float latitude
        float longitude
        BengkelStatus status
        float average_rating
        int total_reviews
        jsonb offered_services
        timestamptz created_at
    }
    service_requests {
        uuid id PK
        uuid customer_id FK
        uuid bengkel_id FK
        uuid vehicle_id FK
        ServiceType service_type
        text description
        bool is_emergency
        float latitude
        float longitude
        bigint price
        ServiceStatus status
        int rating
        text review
        int tire_count
        bool customer_completed
        bool provider_completed
        jsonb photo_urls
        text mechanic_notes
        text vehicle_info
        text completion_photo_url
        timestamptz assigned_at
        timestamptz completed_at
        timestamptz created_at
        timestamptz updated_at
    }
    bids {
        uuid id PK
        uuid service_request_id FK
        uuid provider_uid FK
        uuid bengkel_id FK
        bigint price
        text notes
        BidStatus status
        timestamptz created_at
    }
    topups {
        uuid id PK
        uuid user_id FK
        text order_id
        float gross_amount
        TopupStatus status
        text payment_type
        text redirect_url
        text snap_token
        timestamptz created_at
        timestamptz updated_at
    }
    withdrawals {
        uuid id PK
        uuid user_id FK
        float amount
        text bank_name
        text bank_account_number
        text bank_account_name
        WithdrawalStatus status
        text notes
        timestamptz created_at
        timestamptz updated_at
    }
    chat_messages {
        uuid id PK
        uuid service_request_id FK
        uuid sender_id FK
        text content
        text image_url
        timestamptz created_at
    }
    order_locations {
        uuid service_request_id PK
        uuid provider_uid FK
        float latitude
        float longitude
        timestamptz updated_at
    }
    customer_locations {
        uuid service_request_id PK
        uuid customer_id FK
        float latitude
        float longitude
        timestamptz updated_at
    }
    order_disputes {
        uuid id PK
        uuid service_request_id FK
        uuid initiated_by FK
        text initiator_role
        text reason
        text proof_url
        text status
        timestamptz created_at
        timestamptz resolved_at
    }
    behavior_reports {
        uuid id PK
        uuid service_request_id FK
        uuid reporter_id FK
        text reason
        timestamptz created_at
    }

    users ||--o{ vehicles : "customer_id"
    users ||--o| bengkels : "provider_uid"
    users ||--o{ service_requests : "customer_id"
    users ||--o{ bids : "provider_uid"
    users ||--o{ topups : "user_id"
    users ||--o{ withdrawals : "user_id"
    users ||--o{ chat_messages : "sender_id"
    users ||--o{ order_disputes : "initiated_by"
    users ||--o{ behavior_reports : "reporter_id"
    bengkels ||--o{ service_requests : "bengkel_id"
    bengkels ||--o{ bids : "bengkel_id"
    vehicles |o--o{ service_requests : "vehicle_id"
    service_requests ||--o{ bids : "service_request_id"
    service_requests ||--o{ chat_messages : "service_request_id"
    service_requests ||--o| order_locations : "service_request_id"
    service_requests ||--o| customer_locations : "service_request_id"
    service_requests ||--o{ order_disputes : "service_request_id"
    service_requests ||--o{ behavior_reports : "service_request_id"
